# media_server

./: .gitignore  README.md  pyproject.toml
accounts/: forms.py  serializers.py  urls.py  views.py
accounts/templates/accounts/: account_home.html  login.html  register.html
config/: .env.example  settings.py  urls.py
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
media_library/: admin.py  apps.py  ffmpeg.py  forms.py  models.py  processing.py  signals.py  tmdb.py  urls.py  views.py
media_library/management/commands/: analyze_media_variants.py  reorganize_media_storage.py
media_library/migrations/: 0001_initial.py  0002_genre_remove_mediatitle_genres_mediatitlegenre_and_more.py  0002_mediafile_description_localizations_and_more.py  0003_mediafile_audio_tracks_mediafile_subtitle_tracks.py  0004_mediaimage.py  0005_restructure_media_library.py  0006_align_restructure_indexes.py  0007_mediavariant_playable_error_and_more.py  0008_mediavariant_hls_error_mediavariant_hls_manifest.py  0009_mediaprocessingjob.py
media_library/templates/media_library/: base.html  episode_with_variant_form.html  mediafile_confirm_delete.html  mediafile_detail.html  mediafile_form.html  mediafile_list.html  related_form.html  season_detail.html
media_library/templatetags/: media_localization.py
